force-app/main/default/objects/Account/fields/RstkCustomer__c.field-meta.xml
<CustomField>
    <fullName>RstkCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RstkCustomer</label>
    <type>Checkbox</type>
</CustomField>