force-app/main/default/objects/Account/fields/Sales_Tax_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Expiration_Date__c</fullName>
    <label>Sales Tax Expiration Date</label>
    <length>18</length>
    <type>Text</type>
</CustomField>