force-app/main/default/objects/Account/fields/Star_Level_3_Reached_Date__c.field-meta.xml
<CustomField>
    <fullName>Star_Level_3_Reached_Date__c</fullName>
    <label>Star Level 3 Reached Date</label>
    <type>DateTime</type>
</CustomField>