force-app/main/default/objects/Account/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teacher</label>
    <type>Checkbox</type>
</CustomField>