force-app/main/default/objects/Account/fields/test_star__c.field-meta.xml
<CustomField>
    <fullName>test_star__c</fullName>
    <formula>IF(ISPICKVAL(OMS_Short_Name__c, &quot;75 PLAT 5 STAR&quot;),


ISPICKVAL(OMS_Short_Name__c, &quot;76 PLAT 4 STAR&quot;),

ISPICKVAL(OMS_Short_Name__c, &quot;85 PLAT 3 STAR&quot;)
)</formula>
    <label>test star</label>
    <type>Checkbox</type>
</CustomField>