force-app/main/default/objects/Account/fields/Total_Orders_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders_Amount__c</fullName>
    <label>Total Orders Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>