force-app/main/default/objects/Account/fields/Type_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Type_Change_Date__c</fullName>
    <label>Type Change Date</label>
    <type>Date</type>
</CustomField>