force-app/main/default/objects/Account/fields/Type_Of_Company__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Company__c</fullName>
    <label>Type Of Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>