force-app/main/default/objects/Account/recordTypes/B2CBusinessAccount.recordType-meta.xml
<RecordType>
    <fullName>B2CBusinessAccount</fullName>
    <active>false</active>
    <label>B2C Business Account</label>
</RecordType>