force-app/main/default/objects/Account/validationRules/AVA_SFCLOUD__Validate_AvaTax_Exemption_Customer_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>AVA_SFCLOUD__Validate_AvaTax_Exemption_Customer_ID</fullName>
    <active>false</active>
    <errorConditionFormula>IF(LEN(AVA_SFCLOUD__AvaTax_Exemption_Customer_ID__c) &gt; 0,
OR(LEN(AVA_SFCLOUD__AvaTax_Exemption_Customer_ID__c) != 18,CASESAFEID(Id) != AVA_SFCLOUD__AvaTax_Exemption_Customer_ID__c),FALSE)</errorConditionFormula>
    <errorDisplayField>AVA_SFCLOUD__AvaTax_Exemption_Customer_ID__c</errorDisplayField>
    <errorMessage>Please do not edit this field value</errorMessage>
</ValidationRule>