force-app/main/default/objects/Account/validationRules/Validating_Birthday.validationRule-meta.xml
<ValidationRule>
    <fullName>Validating_Birthday</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(REGEX(  BirthMoDay__c , &quot;^(0[13578]|1[02])(0[1-9]|[12]\\d|3[01])$|^(0[469]|11)(0[1-9]|[12]\\d|30)$|^02(0[1-9]|1\\d|2[0-9])$&quot;)), NOT( ISBLANK(BirthMoDay__c ) ) )</errorConditionFormula>
    <errorDisplayField>BirthMoDay__c</errorDisplayField>
    <errorMessage>Please enter the correct date format &quot;MMDD&quot;</errorMessage>
</ValidationRule>