force-app/main/default/objects/Account/listViews/Accounts_Platinum.listView-meta.xml
<ListView>
    <fullName>Accounts_Platinum</fullName>
    <columns>Legacy_Customer_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Discount_Level__c</field>
        <operation>equals</operation>
        <value>3 Star</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Platinum</value>
    </filters>
    <filters>
        <field>Distributor__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Teacher__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Employee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts-Platinum</label>
</ListView>