force-app/main/default/objects/Account/listViews/All_Accounts_Filtered.listView-meta.xml
<ListView>
    <fullName>All_Accounts_Filtered</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Perf365Days__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Platinum</value>
    </filters>
    <label>All Accounts-Filtered</label>
</ListView>